--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^3.1.1",
+    "@stripe/stripe-js": "^5.4.0",
     "bcrypt": "^5.1.1",
     "lucide-react": "^0.454.0",
     "mongodb": "^6.10.0",
     "next": "15.0.2",
     "openai": "^4.70.2",
     "react": "19.0.0-rc-02c0e824-20241028",
-    "react-dom": "19.0.0-rc-02c0e824-20241028"
+    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "stripe": "^17.5.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
